# cpp-git-git-msvc

./: .gitignore  CMakeLists.txt  Git-Git.Tests.ps1  README.md  appveyor.yml  git-git.cpp
