CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0003 NEW)

PROJECT(git-git)

IF(MSVC)
  SET(CMAKE_CXX_FLAGS "/W3 /O2 /Oi /Gy /EHsc ${CMAKE_C_FLAGS}")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_UNICODE")
ELSE()
  MESSAGE(FATAL_ERROR "Not supported.")
ENDIF()

IF(CMAKE_CL_64)
  ADD_EXECUTABLE(git-git-x64 git-git.cpp)
ELSE()
  ADD_EXECUTABLE(git-git-x86 git-git.cpp)
ENDIF()